# matetui

./: Cargo.toml  README.md  Taskfile.yaml  release.toml
examples/: widget_grid_selector.rs  widget_switch.rs  widget_text_area.rs
examples/matetui/: fps.rs  home.rs  main.rs
src/: lib.rs  macros.rs
src/framework/: app.rs  component.rs  events.rs  keyboard.rs  tui.rs
src/widgets/gridselector/: selector.rs  state.rs  widget.rs
src/widgets/switch/: widget.rs
src/widgets/textarea/: mod.rs
src/widgets/textarea/behaviour/: cursor.rs  highlight.rs  input.rs  scroll.rs  util.rs
src/widgets/textarea/core/: builder.rs  getset.rs  mod.rs  widget.rs
src/widgets/textarea/core/validation/: mod.rs  validators.rs
