[package]
name = "matetui"
version = "0.3.1"
edition = "2021"
description = "🧉 matetui » utilities for building Terminal User Interfaces"
authors = ["Lucas Colombo <lucas@lucode.ar>"]
license = "MIT"
documentation = "https://docs.rs/matetui"
homepage = "https://github.com/lucodear/matetui"
repository = "https://github.com/lucodear/matetui"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[lib]
doctest = false
name = "matetui"
path = "src/lib.rs"

[features]
default = ["all"]
all = ["widget-textarea", "widget-switch", "widget-gridselector"]
"widget-textarea" = ["dep:unicode-width"]
"widget-switch" = ["dep:unicode-width"]
"widget-gridselector" = ["dep:unicode-width"]

[dependencies]
tokio = { version = "1.40.0", features=["tokio-macros", "macros", "sync", "time", "rt-multi-thread" ] }
tokio-util = { version = "0.7.12" }
ratatui = { version = "0.28.1" }
crossterm = { version="0.28.1", features=["event-stream"] }
strum = { version="0.26.1" }
downcast-rs = { version="1.2.1"}
futures = { version = "0.3.30" }
unicode-width = { version = "0.2.0", optional = true }
thiserror = "1.0.64"

[[example]]
name = "matetui"
path = "examples/matetui/main.rs"
